<resources>
    <string name="app_name">PexCourier</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="silahkan_tunggu">Silahkan Tunggu</string>
    <string name="delivery">Delivery</string>
    <string name="forward">Shuttle</string>
    <string name="transit">Transit</string>
    <string name="pick_up">Pick Up</string>
    <string name="home">Home</string>
    <string name="app_version">PexCourier v.1.0.1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="genta_prima">Genta Prima</string>
    <string name="pengirim">Pengirim</string>
    <string name="alamat">Jl masjid Al-ikhsan, Gg h.simin no 42, RT.02/03, Jatibening , kec Pondok Gede , kota Bekasi</string>
    <string name="prasetya">Prasetya</string>
    <string name="resi">NXDJBD1000016JBD1222</string>
    <string name="tgl">15 Februari 2022</string>
    <string name="status">Status</string>
    <string name="statusdelivery">Belum Terscan</string>
    <string name="package_already_to_pickup">PACKAGE ALREADY TO PICKUP</string>
    <string name="nextday_1_2_hari">Nextday (1-2 Hari)</string>
    <string name="layanan">Layanan</string>
    <string name="tarif">Tarif</string>
    <string name="kurir">Kurir</string>
    <string name="status_pengiriman">Status Pengiriman</string>
    <string name="change_password">Change Your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="user_key">USER_KEY</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="after_requst_transit">after requst transit</string>
    <string name="request_otp">Request OTP</string>
    <string name="set_profile">Set Profile</string>
    <string name="hello">Hello,</string>
    <string name="kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="send_otp">Send OTP</string>
    <string name="kirim_ulang">Kirim ulang</string>
    <string name="tidak_menerima_kode">Tidak menerima kode?</string>
    <string name="savePassword">Simpan Password</string>
    <string name="time">22:30</string>
    <string name="perbarui_tarif">Perbarui Tarif</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="foto">Foto</string>
    <string name="cetak_resi">Cetak Resi</string>
    <string name="cetak_masal">Cetak Massal</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="asuransi">Dengan asuransi</string>
    <string name="laporkan_kesalahan">Laporkan Kesalahan</string>
    <string name="kurir_pickup">Kurir Pickup</string>
    <string name="shuttle">Shuttle</string>
    <string name="update_ukuran">Update Ukuran</string>
    <string name="no_resi">Nomor Resi</string>
    <string name="nama_pengirim">Jayadi</string>
    <string name="ukuran_sebelumnya">Ukuran Sebelumnya</string>
    <string name="contoh_jenis_ukuran">Medium</string>
    <string name="contoh_dimensi_ukuran">(30 x 15 x 15 cm)</string>
    <string name="status_sebelumnya">Status Sebelumnya</string>
    <string name="contoh_status_sebelumnya">Pending</string>
    <string name="contoh_tarif">Rp 1.000</string>
    <string name="kurang_bayar">Kurang Bayar</string>
    <string name="contoh_kurang_bayar">Rp 3.500</string>
    <string name="bayar">Bayar</string>
    <string name="ubah_jenis_ukuran">Ubah Jenis Ukuran</string>
    <string name="_asuransi">Asuransi</string>
    <string name="pembayaran_langsung">Pembayaran Langsung</string>
    <string name="tunai_cash">Tunai (Cash)</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="mandiri">Mandiri</string>
    <string name="bni">BNI</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="ovo">OVO</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil</string>
    <string name="payment_success_info">Pembayaran tunai sudah selesai pada \n 15 Oktober 2022, 14:00 WIB</string>
    <string name="jumlah_pembayaran">Jumlah Pembayaran</string>
    <string name="selesai">Selesai</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="info_Va">Silahkan bayar tagihan ini sebelum \n menggunakan virtual account lagi</string>
    <string name="batas_waktu_pembayaran">Batas Waktu pembayaran</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="contoh_nama_bank">Bank Mandiri</string>
    <string name="nomor_virtual_account">Nomor Virtual Account</string>
    <string name="contoh_virtual_akun">800012318831</string>
    <string name="back">Back</string>
    <string name="info_shopee">Let your customer scan this QR code to start transaction</string>
    <string name="share">Share</string>
</resources>