<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    android:id="@+id/card_view"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_doc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_baseline_text_snippet_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="7dp"
                android:text="@string/resi"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8"
                tools:ignore="RtlSymmetry" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tgl"
            app:layout_constraintEnd_toEndOf="@+id/btnWaSender"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/statusdelivery"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btnWaSender"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="@dimen/margin_activity"
            android:src="@drawable/nearme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/tv_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/genta_prima"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_activity"
            android:layout_marginEnd="16dp"
            android:text="@string/pengirim"
            android:textColor="@color/coloRed"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sender"
            app:layout_constraintEnd_toStartOf="@+id/btnWaSender"
            app:layout_constraintTop_toTopOf="@+id/tv_sender" />


        <ImageView
            android:id="@+id/btnWaSender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:src="@drawable/whatsapp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sender" />

        <TextView
            android:id="@+id/tv_address_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:letterSpacing="0.05"
            android:text="@string/alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sender" />

        <TextView
            android:id="@+id/tv_patokan_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:letterSpacing="0.05"
            android:text="@string/alamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address_sender" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="@dimen/margin_activity"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_patokan_sender" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@drawable/stroke_line"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            />

        <TextView
            android:id="@+id/tv_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/prasetya"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/btnWaReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:src="@drawable/whatsapp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_receiver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_activity"
            android:layout_marginEnd="16dp"
            android:text="Penerima"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_receiver"
            app:layout_constraintEnd_toStartOf="@+id/btnWaReceiver"
            app:layout_constraintTop_toTopOf="@+id/tv_receiver" />

        <TextView
            android:id="@+id/tv_address_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="40dp"
            android:letterSpacing="0.05"
            android:text="@string/alamat"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_receiver" />

        <TextView
            android:id="@+id/tv_patokan_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:letterSpacing="0.05"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/alamat"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address_receiver" />

        <ImageView
            android:id="@+id/imgScan"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_qr_code_scanner_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_patokan_receiver"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_patokan_receiver" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/terima_paket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/tv_title_kurir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/kurir_pickup"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/tv_nm_kurir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/last_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>